tests/ui/fail_unsupported_cache_retention.stderr
error[E0599]: the method `prompt_cache_retention` exists for struct `ResponseRequestBuilder<ai_client::openai::responses::Gpt4oMini, HasInput>`, but its trait bounds were not satisfied
 --> tests/ui/fail_unsupported_cache_retention.rs:9:10
  |
7 |       let _ = ResponseRequest::<Gpt4oMini>::builder()
  |  _____________-
8 | |         .input(OpenAIResponsesInput::Text("hello".into()))
9 | |         .prompt_cache_retention(PromptCacheRetention::Hours24)
  | |_________-^^^^^^^^^^^^^^^^^^^^^^
  |
 ::: src/openai/responses/models.rs
  |
  |           pub struct $name;
  |           ----------------- doesn't satisfy `_: SupportsPromptCacheRetention`
  |
  = note: the following trait bounds were not satisfied:
          `ai_client::openai::responses::Gpt4oMini: SupportsPromptCacheRetention`
